--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -45,6 +43,8 @@
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4"
+    "@types/react-dom": "^16.9.4",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0"
   }
 }
