--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.2",
+    "antd": "^3.26.6",
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
