--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.8.18",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
+    "raf": "^3.4.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
@@ -47,6 +48,7 @@
     "@types/jest": "^24.0.25",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.1",
+    "@types/raf": "^3.4.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "less-loader": "^5.0.0"
