--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.2",
     "antd": "^3.26.6",
+    "async-validator": "^3.2.3",
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
+    "create-react-class": "^15.6.3",
     "customize-cra": "^0.9.1",
     "dayjs": "^1.8.18",
     "less": "^3.10.3",
@@ -20,7 +22,8 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "warning": "^4.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
